--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 categories = ["data structures", "caching"]
 description = "Toboggan-kv is an abstraction layer over multiple KV stores"
 exclude = [".github", "rustfmt.toml"]
-keywords = ["sled","kv","keyvalue","key-value"]
+keywords = ["sled","btree","kv","keyvalue","key-value"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/mindbeam/toboggan-kv"
 
